[package]
name = "crane"
version = "0.1.0"
edition = "2021"
description = "A simple and fast webserver."
repository = "https://github.com/Pranjal-Patel/crane"
readme = "README.md"
categories = ["web-programming"]

[dependencies]
scoped_threadpool = "0.1.9"
url = "2.4.1"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
