[package]
name = "crane-webserver"
version = "0.1.0"
edition = "2021"
authors = ["Pranjal Patel <pranjalpatel@duck.com>"]
description = "A simple and fast webserver."
repository = "https://github.com/Pranjal-Patel/crane"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["web-programming"]
exclude = [
  ".github/*"
]

[dependencies]
scoped_threadpool = "0.1.9"
url = "2.4.1"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
